Defect fixes for DE19319 - React_Mobile_Guest Login_Background colour of footer text is not completely displaying. Some white space is displaying DE19320 - React_Member_Firefox_Toggle text content "Video Visit kp.org Login/Video Visit Temporary Access" not displaying at centre.

--- a/docroot/react/src/views/authentication/authentication.less
+++ b/docroot/react/src/views/authentication/authentication.less
@@ -163,7 +163,6 @@
 
                 .toggle-text {
                     display: inline-block;
-                    height: 100%;
                     margin: auto 0;
                 }
             }
@@ -184,6 +183,14 @@
             font-size: 0.7rem;
         }
     }
+}
+
+.form-footer{
+    display: block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #FFFFFF;
 }
 
 /* Mobile Styles to  Tablet Styles */
@@ -209,6 +216,9 @@
             display: block;
         }
     }
+    .form-footer{
+        display: none;
+    }
 }
 
 
@@ -230,7 +240,7 @@
 /* Tablet Styles */
 @media only screen and (min-width: 661px) and (max-width: 960px) and (orientation: portrait) {
     .main-content {
-        height: calc(81vh - 105px);
+        height: calc(82vh - 105px);
         .sso-content,
         .temp-content {
 
